--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1>DEPORTEN A LOS VENEZOLANOS</h1>
-<h2>Campo de concentracion de Puneños</h2>
+<center><h1>DEPORTEN A LOS VENEZOLANOS</h1>
+<h2>Campos de concentracion para chamos en Puno</h2>
 
-<h5>Muchas gracias por la visita</h5>
+<h4>Muchas gracias por la visita</h4>
+  <h5>Atte: Jesus Andres Lujan Carrion</h5>
+</center>
