--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-<center><h1>DEPORTEN A LOS VENEZOLANOS</h1>
-<h2>Campos de concentracion para chamos en Puno</h2>
+<html>
+<head>
+  <title>Proyecto Mirqu</title>
+</head>
+<body>
 
-<h4>Muchas gracias por la visita</h4>
-  <h5>Atte: Jesus Andres Lujan Carrion</h5>
-</center>
+<left><h1>Proyecto Mirqu</h1></left>
+
+  
+
+  
+</body>
+</html>
