--- a/index.html
+++ b/index.html
@@ -4,7 +4,67 @@
 </head>
 <body>
 
-<left><h1>Proyecto Mirqu</h1></left>
+<left><h3>Proyecto Mirqu</h3></left><hr>
+El proyecto Mirqu tiene como objetivo reducir las barreras de entrada para la participación en actividades espaciales desde el ámbito académico,
+promoviendo la formación de capacidades en ingeniería espacial a través del desarrollo de prototipos funcionales de CubeSat en tierra. <br>
+
+Este enfoque busca facilitar el aprendizaje práctico y teórico mediante la simulación de subsistemas 
+reales de un satélite tipo CubeSat, empleando componentes de bajo costo y tecnologías accesibles.<br>
+
+La propuesta está orientada a proporcionar una base comprensible, replicable y aplicable para estudiantes, docentes e investigadores que deseen 
+iniciarse en el diseño, construcción y operación de sistemas espaciales. Los prototipos desarrollados no solo representarán una herramienta 
+pedagógica valiosa, sino también un punto de partida sobre el cual futuras investigaciones puedan construir soluciones más avanzadas 
+o ser validadas en contextos más exigentes.<br>
+
+Cada subsistema del CubeSat (como energía, comunicación, control de misión y carga útil) será documentado detalladamente, con el fin de
+que los procedimientos puedan ser reproducidos con facilidad y utilizados como guía en entornos educativos o de investigación.<br>
+
+El proyecto Mirqu no solo se orienta a la construcción de un prototipo funcional de CubeSat en tierra, sino también a proporcionar una
+formación sólida y accesible en torno a los principales aspectos de la ingeniería espacial, especialmente en el ámbito de los CubeSats.<br>
+
+Esta iniciativa busca democratizar el conocimiento espacial, facilitando el acceso a contenidos técnicos mediante el uso de tecnologías 
+de bajo costo, con el objetivo de construir capacidades sostenibles desde el entorno académico.<br>
+Se espera que los participantes y usuarios del prototipo adquieran conocimientos fundamentales en:<br>
+
+<ul>
+  <li>Introducción a los sistemas espaciales y los beneficios estratégicos del uso de tecnologías espaciales.</li>
+  <li>Fundamentos de ingeniería aplicados al diseño y desarrollo de CubeSats, incluyendo capacidades y casos de uso reales.</li>
+  <li>Gestión de proyectos para el ciclo completo de desarrollo de CubeSats.</li>
+  <li>Ingeniería de confiabilidad en sistemas satelitales.</li>
+  <li>Métodos de verificación, validación y pruebas aplicadas a sistemas espaciales.</li>
+  <li>Uso de CubeSats como herramientas para el desarrollo de capacidades académicas y tecnológicas sostenibles.</li>
+  <li>Fundamentos operativos y regulatorios en torno a la operación de satélites.</li>
+</ul>
+  
+Los contenidos que sustentan esta formación están organizados en torno a los siguientes ejes temáticos:
+
+<ul>
+  <li>Exploración espacial mediante tecnologías de pequeñas naves espaciales.</li>
+  <li>Arquitectura y operación de satélites tipo “Lean”, con foco en la interacción con el entorno espacial.</li>
+  <li>Diseño de micro, nano y pico satélites; autonomía, guiado y control.</li>
+  <li>Desarrollo de estaciones terrestres, estructuras desplegables y componentes eléctricos.</li>
+  <li>Ingeniería de sistemas aplicada a naves espaciales pequeñas.</li>
+  <li>Diseño, integración y operación de micro y nanosatélites.</li>
+  <li>Arquitecturas innovadoras, incluyendo propulsión, cultivo de órbitas y materiales funcionales.</li>
+  <li>Sostenibilidad de las actividades espaciales: monitoreo de desechos orbitales y conciencia situacional espacial.</li>
+</ul>
+
+Todo el contenido será presentado de manera clara, progresiva y comprensible, permitiendo que personas de diferentes disciplinas —no necesariamente
+especializadas en aeroespacial— puedan comprender los fundamentos del desarrollo de pequeños satélites 
+y aplicarlos a sus propios proyectos o iniciativas académicas.<br>
+
+<hr>
+<left><h3>Colaboradores</h3></left>
+<ul>
+  <li><a href="#">Boyd Robert Mallqui</a> | Indexador</li>
+  <li><a href="#">Nicolas Prieto</a> | Diseños y esquematicos</li>
+  <li><a href="#">Alú Mauricio</a> | Telecomunicaciones</li>
+  <li><a href="#">Jose Luis Henriquez</a> | Estudiante de Ing. Electronica</li>
+  <li><a href="#">Sebastian Carreño</a> | Estudiante de Ing. Electronica </li>
+  <li><a href="#">Fabricio Albujar</a> | Dinamica de Cuerpos</li>
+</ul>
+
+
 
   
 
