--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Todo el contenido será presentado de manera clara, progresiva y comprensible, p
 especializadas en aeroespacial— puedan comprender los fundamentos del desarrollo de pequeños satélites 
 y aplicarlos a sus propios proyectos o iniciativas académicas.<br>
 
+<br>
+<center><div style="display:block;background:red;color:white;border-radius:8px;padding:10px 40px;margin:10px;">ir a los temas</div></center>
+<br>
+  
 <hr>
 <left><h3>Colaboradores</h3></left>
 <ul>
