--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ especializadas en aeroespacial— puedan comprender los fundamentos del desarrol
 y aplicarlos a sus propios proyectos o iniciativas académicas.<br>
 
 <br>
-<center><div style="display:block;background:red;color:white;border-radius:8px;padding:10px 40px;margin:10px;">ir a los temas</div></center>
+<center><div style="display:block;background:#2e86c1;color:white;border-radius:8px;padding:10px 40px;margin:10px;witdh:200px;cursor:pointer;text-decoration:none;">
+<a href="temario.html"> Ir a los temas </a>
+</div></center>
 <br>
   
 <hr>
