--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<left><img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-text;"/><h3>Proyecto Mirqu</h3></left><hr>
+<left><img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/><h3>Proyecto Mirqu</h3></left><hr>
 El proyecto Mirqu tiene como objetivo reducir las barreras de entrada para la participación en actividades espaciales desde el ámbito académico,
 promoviendo la formación de capacidades en ingeniería espacial a través del desarrollo de prototipos funcionales de CubeSat en tierra. <br>
 
