--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <body>
 
 <left>
-<div style="display:flex;position:fixed;border-bottom:1px solid black;">
-<img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/><h3>Proyecto Mirqu</h3>
+<div style="display:flex;position:fixed;border-bottom:1px solid black;width:100%;background:white;">
+<img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/>&nbsp;&nbso;<h3>Proyecto Mirqu</h3>
 </div>
 </left>
-<br><br><br>
+<br><br><br><br><br>
 El proyecto Mirqu tiene como objetivo reducir las barreras de entrada para la participación en actividades espaciales desde el ámbito académico,
 promoviendo la formación de capacidades en ingeniería espacial a través del desarrollo de prototipos funcionales de CubeSat en tierra. <br>
 
