--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <left>
-<div style="display:flex;position:fixed;border-bottom:1px solid black;width:100%;background:white;margin:0;">
+<div style="display:flex;position:fixed;border-bottom:1px solid black;width:100%;background:white;margin:0;padding:0;top:0;">
 <img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/>&nbsp;&nbsp;<h3>Proyecto Mirqu</h3>
 </div>
 </left>
