--- a/temario.html
+++ b/temario.html
@@ -6,7 +6,7 @@
 
 <left>
 <div style="display:flex;position:fixed;border-bottom:1px solid black;width:100%;background:white;margin:0;padding:5px;top:0;">
-<img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/>&nbsp;&nbsp;<h3>Proyecto Mirqu</h3>
+<img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/>&nbsp;&nbsp;<h3><a href="index.html" style="color:black;text-decoration:none;">Proyecto Mirqu</a></h3>
 </div>
 </left>
 
