--- a/temario.html
+++ b/temario.html
@@ -12,15 +12,15 @@
 
 <br><br><br><br>
 <center><h2>ARIANA I</h2></center>
-<center><img src="prototipoGenerico.jpg"/></center>
+<center><img src="img/prototipoGenerico.jpg"/></center>
 
 El desarrollo del prototipo se plantea como un proceso progresivo que parte del conocimiento teórico hasta la validación práctica del sistema. <br>
 A continuación, se detallan las etapas previstas:<br>
 
-<a href="teoria.html">Formación teórica inicial</a>
-<a href="modelos.html">Diseño y modelado de subsistemas</a>
-<a href="prototipado.html">Prototipado físico</a>
-<a href="implementacion.html">Implementación y pruebas</a>
+<a href="teoria.html">Formación teórica inicial</a><br>
+<a href="modelos.html">Diseño y modelado de subsistemas</a><br>
+<a href="prototipado.html">Prototipado físico</a><br>
+<a href="implementacion.html">Implementación y pruebas</a><br>
 <br>
 Este enfoque asegura una comprensión integral del desarrollo satelital, desde los fundamentos teóricos hasta la aplicación práctica, promoviendo el 
   aprendizaje basado en la experiencia y fomentando capacidades reales de diseño e implementación de tecnología espacial.<br>
