--- a/temario.html
+++ b/temario.html
@@ -13,7 +13,7 @@
 <br><br><br><br>
 <center><h2>ARIANA I</h2></center>
 <center><img src="img/prototipoGenerico.jpg"/></center>
-
+<center>
 El desarrollo del prototipo se plantea como un proceso progresivo que parte del conocimiento teórico hasta la validación práctica del sistema. <br>
 A continuación, se detallan las etapas previstas:<br>
 
@@ -22,9 +22,11 @@ A continuación, se detallan las etapas previstas:<br>
 <a href="prototipado.html">Prototipado físico</a><br>
 <a href="implementacion.html">Implementación y pruebas</a><br>
 <br>
-Este enfoque asegura una comprensión integral del desarrollo satelital, desde los fundamentos teóricos hasta la aplicación práctica, promoviendo el 
-  aprendizaje basado en la experiencia y fomentando capacidades reales de diseño e implementación de tecnología espacial.<br>
-  
+Este enfoque asegura una comprensión integral del desarrollo satelital, desde los fundamentos teóricos <br>
+hasta la aplicación práctica, promoviendo el aprendizaje basado en la experiencia y fomentando capacidades <br>
+reales de diseño e implementación de tecnología espacial.<br>
+
+  </center>
   
 </body>
 </html>
