--- a/teoria.html
+++ b/teoria.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <ttile>Teoria Ariana I</ttile>
+  <ttile>Teoria Ariana I</tile>
 </head>
 
 <H4>Ubicacion</H4> <a href="temario.html">Ariana I</a>/<a href="teoria.html">Teoria Inicial</a>
@@ -10,7 +10,8 @@
 El primer paso consiste en la lectura y estudio de los fundamentos teóricos necesarios para comprender el funcionamiento de un CubeSat y sus principales subsistemas: <br>
 energía, control, comunicaciones, sensores, estructura, entre otros. Para reforzar esta etapa, se aplicarán cuestionarios y evaluaciones que permitan verificar la 
 comprensión de los temas abordados.<br>
-
+<br>
+  <h3>TEMAS</h3><br>
 <a href="teoria_primero.html">Entendiendo los satélites pequeños.</a><br>
 
 </center>
