--- a/teoria_primero.html
+++ b/teoria_primero.html
@@ -8,7 +8,7 @@
 <br><hr><br>
 
 <i>"Las tecnologías espaciales afectan muchas áreas de nuestras vidas, y sus derivados tienen una amplia gama de aplicaciones aquí en la Tierra, <br>
-que van desde la medicina hasta la seguridad alimentaria, beneficiando enormemente nuestra economía y sociedad". <br></i>
+que van desde la medicina hasta la seguridad alimentaria, beneficiando enormemente nuestra economía y sociedad". <br></i><br>
 <right> - JAXA (Agencia Japonesa de Exploración Aeroespacial) </right><br>
 
 <br>
@@ -38,7 +38,7 @@ Los satélites de comunicaciones son vitales para mantener al mundo conectado, e
 <li>Transmisiones de radio y televisión.</li>
 <li>Telefonía satelital.</li>
 <li>Conectividad a internet global, como lo demuestran proyectos como Starlink.</li>
-</ul>ul>
+</ul>
 
 <h4>3. Navegación</h4>
 La navegación satelital es indispensable para la vida moderna. Algunos de sus usos incluyen:<br>
@@ -46,7 +46,7 @@ La navegación satelital es indispensable para la vida moderna. Algunos de sus u
 <li><b>Sistemas globales de navegación por satélite (GNSS): </b>GPS (EE.UU.), Galileo (UE), GLONASS (Rusia), BeiDou (China).</li>
 <li><b>Gestión del tráfico: </b>aéreo, marítimo, ferroviario y vehicular.</li>
 <li><b>Localización y geolocalización: </b>desde la logística hasta las aplicaciones móviles.</li>
-</ul>ul>
+</ul>
 
 <h4>4. Aplicaciones científicas y exploración espacial</h4>
 Aquí es donde los satélites muestran su rol más ambicioso y visionario:<br>
@@ -54,10 +54,60 @@ Aquí es donde los satélites muestran su rol más ambicioso y visionario:<br>
 <li><b>Observación astronómica:</b> telescopios espaciales como el Hubble y el James Webb.</li>
 <li><b>Experimentos en microgravedad: </b>estudios biomédicos, farmacéuticos o de física fundamental.</li>
 <li><b>Exploración espacial: </b>sondas interplanetarias, orbitadores y misiones de retorno de muestras.</li>
-</ul>ul>
+</ul>
+
+<br>
+Durante los primeros años de la era espacial, los satélites eran enormes, complejos y extremadamente costosos. Sin embargo, el avance tecnológico ha permitido 
+la aparición de una nueva generación de satélites mucho más pequeños.<br>
+<br>
+Echemos un vistazo a estos parámetros clave: <b>la masa del satélite, el costo y el tiempo de desarrollo.</b><br>
 
 
+A diferencia de los satélites grandes, los satélites pequeños destacan por su bajo costo, masa reducida y rápido desarrollo.<br>
+Esto permite lanzamientos más frecuentes, mayor flexibilidad y la posibilidad de asumir riesgos tecnológicos para probar nuevas ideas (debido a que si algo falla la pérdida 
+no es tan grande como en un satélite tradicional de millones de dólares.)<br>
 
+Mientras los satélites grandes tradicionales ofrecen alto rendimiento y gran capacidad, requieren vehículos de lanzamiento dedicados, son costosos y tardan años en 
+desarrollarse, lo cual limita la frecuencia de sus misiones.<br>
+
+Los satélites pequeños, por el contrario, pueden lanzarse como carga secundaria, formar constelaciones para observaciones más frecuentes, <b>y son ideales para la 
+educación y la demostración de nuevas tecnologías.</b><br>
+
+<table>
+  <tr>
+    <td>Característica</td>
+    <td>Masa</td>
+    <td>Costo de desarrollo</td>
+    <td>Tiempo de desarrollo</td>
+    <td>Lanzamiento</td>
+    <td>Riesgo</td>
+    <td>Frecuencia de lanzamiento</td>
+    <td>Aplicaciones</td>
+    <td>Escalabilidad</td>
+  </tr>
+  <tr>
+    <td>Satélites Grandes</td>
+    <td>Alta</td>
+    <td>Muy alto</td>
+    <td>Largo (años)</td>
+    <td>Vehículo dedicado</td>
+    <td>Bajo (alta fiabilidad requerida)</td>
+    <td>Baja</td>
+    <td>Misiones complejas y de largo plazo</td>
+    <td>Limitada</td>
+  </tr>
+  <tr>
+    <td>Satélites Pequeños</td>
+    <td>Baja</td>
+    <td>Bajo</td>
+    <td>Corto (meses)</td>
+    <td>Carga secundaria o múltiples por lanzamiento</td>
+    <td>Se permite asumir riesgos tecnológicos</td>
+    <td>Alta</td>
+    <td>Educación, investigación, pruebas tecnológicas</td>
+    <td>Alta (posibilidad de formar constelaciones)</td>
+  </tr>
+</table>
 
 
   
