--- a/teoria_primero.html
+++ b/teoria_primero.html
@@ -128,7 +128,7 @@ En la siguiente ilustración compararemos el tamaño de los satélites.<br>
 
 Lo que diferencia a un CubeSat de los demás microsatélites, son unos estándares establecidos en cuanto a dimensiones y peso reconocidas por toda la comunidad aeroespacial.<br>
 La figura en esta diapositiva resume la cantidad de satélites pequeños (hasta 400 kilogramos) lanzados cada año desde 2010 hasta 2022. <br>
-<img src="img/lanzamientoSatelite.png"><br>
+<img src="img/lanzamientoSatelites.png"><br>
 
 En los últimos cuatro años, se ha observado un crecimiento notable en el lanzamiento de satélites pequeños, particularmente aquellos con una masa superior a los 100 kilogramos.<br>
 La mayoría de estos pertenecen a mega constelaciones de telecomunicaciones, como Starlink o OneWeb. <br>
