--- a/teoria.html
+++ b/teoria.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <tile>Teoria Ariana I</tile>
+  <title>Teoria Ariana I</title>
 </head>
 
 <H4>Ubicacion</H4> <a href="temario.html">Ariana I</a>/<a href="teoria.html">Teoria Inicial</a>
