--- a/teoria_segundo.html
+++ b/teoria_segundo.html
@@ -7,59 +7,75 @@
 <H4>Ubicacion</H4> <a href="temario.html">Ariana I</a>/<a href="teoria.html">Teoria Inicial</a>/<a href="teoria_segundo.html">Líneas de tiempo y Sostenibilidad </a>
 <br><hr><br>
   
-<h4>Líneas de tiempo y Sostenibilidad </h4>
-Como es bien sabido, los satélites pequeños representan una puerta de entrada ideal para que los países en desarrollo se incorporen al sector espacial, gracias a su simplicidad y bajo costo. Esto ha generado una creciente demanda de programas de formación orientados al desarrollo de capacidades mediante CubeSats. Diversas agencias, empresas y universidades ofrecen capacitaciones, muchas veces en conjunto con la venta de satélites, tanto grandes como pequeños. Sin embargo, estos programas no siempre alcanzan el éxito, especialmente cuando la formación está limitada a la teoría o es dirigida exclusivamente por proveedores externos.
-Para que un programa de desarrollo de capacidades sea verdaderamente efectivo, es esencial que los participantes experimenten el ciclo completo del satélite: diseño, integración, pruebas y operación. Esta experiencia debe ser práctica y participativa, permitiendo a los estudiantes involucrarse activamente en cada etapa del proceso. Asimismo, contar con una estrategia de sostenibilidad a largo plazo es clave para asegurar que los conocimientos adquiridos se mantienen y evolucionan con el tiempo.
-El objetivo a corto plazo debe ser construir y operar un prototipo funcional, lo que otorga confianza a los estudiantes y los motiva a continuar avanzando. A largo plazo, se busca que los participantes sean capaces de iniciar sus propias investigaciones, comprendiendo a fondo el funcionamiento de cada subsistema, y aplicando los conocimientos adquiridos para mejorar o adaptar los lineamientos existentes.
-No se trata solo de enseñar habilidades técnicas específicas, como la soldadura de componentes, sino de fomentar la toma de decisiones autónoma, el pensamiento crítico y el liderazgo técnico en cada etapa del proyecto.
+<h4>Líneas de tiempo y Sostenibilidad </h4><br>
+  
+Como es bien sabido, los satélites pequeños representan una puerta de entrada ideal para que los países en desarrollo se incorporen al sector espacial, gracias a su simplicidad 
+y bajo costo. Esto ha generado una creciente demanda de programas de formación orientados al desarrollo de capacidades mediante CubeSats. Diversas agencias, empresas y universidades 
+ofrecen capacitaciones, muchas veces en conjunto con la venta de satélites, tanto grandes como pequeños. Sin embargo, estos programas no siempre alcanzan el éxito, especialmente 
+cuando la formación está limitada a la teoría o es dirigida exclusivamente por proveedores externos.<br>
+  
+Para que un programa de desarrollo de capacidades sea verdaderamente efectivo, es esencial que los participantes experimenten el ciclo completo del satélite: diseño, integración, 
+pruebas y operación. Esta experiencia debe ser práctica y participativa, permitiendo a los estudiantes involucrarse activamente en cada etapa del proceso. <br>
+Asimismo, contar con una estrategia de sostenibilidad a largo plazo es clave para asegurar que los conocimientos adquiridos se mantienen y evolucionan con el tiempo.<br>
+  
+El objetivo a corto plazo debe ser construir y operar un prototipo funcional, lo que otorga confianza a los estudiantes y los motiva a continuar avanzando. A largo plazo, se 
+busca que los participantes sean capaces de iniciar sus propias investigaciones, comprendiendo a fondo el funcionamiento de cada subsistema, y aplicando los conocimientos 
+adquiridos para mejorar o adaptar los lineamientos existentes.<br>
+  
+No se trata solo de enseñar habilidades técnicas específicas, como la soldadura de componentes, sino de fomentar la toma de decisiones autónoma, el pensamiento crítico y
+el liderazgo técnico en cada etapa del proyecto.<br><br>
 
-Las líneas de tiempo de los proyectos CubeSat
+<h3>Las líneas de tiempo de los proyectos CubeSat</h3><br>
 
-Ahora hablaremos sobre la línea de tiempo típica de un proyecto CubeSat.
-Durante los primeros tres meses, que comprenden desde el inicio del proyecto hasta la revisión de la definición de misión, los estudiantes no interactúan con el hardware.
+Ahora hablaremos sobre la línea de tiempo típica de un proyecto CubeSat.<br>
+Durante los primeros tres meses, que comprenden desde el inicio del proyecto hasta la revisión de la definición de misión, los estudiantes no interactúan con el hardware.<br>
  
-En esta etapa, se lleva a cabo un proceso intensivo enfocado en la definición de la misión y el diseño preliminar del satélite. La idea clave es clara: no diseñen el satélite que ustedes quieren, diseñen el satélite que la sociedad necesita.
+En esta etapa, se lleva a cabo un proceso intensivo enfocado en la definición de la misión y el diseño preliminar del satélite. La idea clave es clara: no diseñen el satélite
+  que ustedes quieren, diseñen el satélite que la sociedad necesita.<br>
 
-Si es la primera vez que se aborda un proyecto de este tipo, se recomienda repasar al menos dos veces los fundamentos teóricos, para comprender bien tanto la naturaleza de la misión como la función y requerimientos de cada subsistema.
-El desarrollo de la misión se estructura en tres pasos clave para definir correctamente sus requisitos:
-
-
-
-Identificación de necesidades
- Los estudiantes analizan:
- ¿Qué necesita el país? ¿Qué demanda la sociedad, la economía, el entorno?
- En esta etapa inicial, el espacio no es aún un factor. Se realiza un ranking de necesidades prioritarias, que pueden incluir sectores como agricultura, energía, minería, pesca, seguridad, salud o educación.
+Si es la primera vez que se aborda un proyecto de este tipo, se recomienda repasar al menos dos veces los fundamentos teóricos, para comprender bien tanto la naturaleza de la misión 
+como la función y requerimientos de cada subsistema.<br>
+El desarrollo de la misión se estructura en tres pasos clave para definir correctamente sus requisitos:<br>
 
 
-Evaluación de la viabilidad espacial
- Luego, los estudiantes examinan si el espacio puede ofrecer soluciones a esas necesidades.
- Puede tratarse de un satélite grande, uno pequeño, o una combinación con sistemas terrestres o aéreos. Es importante entender que el espacio puede ser solo una parte de una solución más amplia.
+
+<b>1 - Identificación de necesidades</b><br>
+ Los estudiantes analizan:<br>
+¿Qué necesita el país? ¿Qué demanda la sociedad, la economía, el entorno?<br>
+En esta etapa inicial, el espacio no es aún un factor. Se realiza un ranking de necesidades prioritarias, que pueden incluir sectores como agricultura, energía, minería, pesca, 
+seguridad, salud o educación.<br><br>
 
 
-Validación del CubeSat como plataforma adecuada
- Finalmente, se evalúa si un CubeSat puede cumplir la función requerida.
- Esto puede implicar una solución directa o, en casos donde las capacidades sean limitadas, una demostración tecnológica o prueba de concepto.
+<b>2 - Evaluación de la viabilidad espacial</b><br>
+ Luego, los estudiantes examinan si el espacio puede ofrecer soluciones a esas necesidades.<br>
+ Puede tratarse de un satélite grande, uno pequeño, o una combinación con sistemas terrestres o aéreos. Es importante entender que el espacio puede ser solo una 
+parte de una solución más amplia.<br><br>
 
 
-En esta guía, se parte de una misión ya definida. Por ello, si se trata de un primer acercamiento a este tipo de proyecto, se recomienda seguir los lineamientos establecidos. A medida que se adquiera mayor experiencia, los estudiantes estarán en condiciones de proponer y desarrollar sus propias misiones de forma autónoma.
+<b>3 - Validación del CubeSat como plataforma adecuada</b>
+ Finalmente, se evalúa si un CubeSat puede cumplir la función requerida.<br>
+ Esto puede implicar una solución directa o, en casos donde las capacidades sean limitadas, una demostración tecnológica o prueba de concepto.<br><br>
 
 
-Expondremos un ejemplo en la misión  BIRDS-5
-
-Este proceso se lleva a cabo al inicio del proyecto, sin necesidad de manipular hardware. Un buen ejemplo es el proceso de definición de misión en BIRDS-5, donde se identificaron múltiples necesidades en países como Zimbabue y Uganda, abarcando sectores como salud, minería y recursos hídricos. 
-
-Se eligió como misión el monitoreo de la calidad del agua, una tarea que normalmente requeriría un satélite grande, pero que incluso un CubeSat de 1U puede abordar, ofreciendo datos útiles para que los usuarios se familiaricen con el análisis y la distribución de información a nivel nacional.
-
-Una vez definida la misión, los estudiantes desarrollan un escenario de misión y analizan su viabilidad con un CubeSat de 1U. En esta etapa deben responder preguntas clave:
-
-¿Qué componentes se necesitan?
+En esta guía, se parte de una misión ya definida. Por ello, si se trata de un primer acercamiento a este tipo de proyecto, se recomienda seguir los lineamientos establecidos. <br>
+A medida que se adquiera mayor experiencia, los estudiantes estarán en condiciones de proponer y desarrollar sus propias misiones de forma autónoma.<br><br>
 
 
-¿Se deben adquirir o desarrollar internamente?
+<h3>Expondremos un ejemplo en la misión  BIRDS-5</h3><br>
 
+Este proceso se lleva a cabo al inicio del proyecto, sin necesidad de manipular hardware. Un buen ejemplo es el proceso de definición de misión en BIRDS-5, donde se identificaron 
+múltiples necesidades en países como Zimbabue y Uganda, abarcando sectores como salud, minería y recursos hídricos. <br>
 
-¿Todos los componentes caben dentro del volumen de 1U?
+Se eligió como misión el monitoreo de la calidad del agua, una tarea que normalmente requeriría un satélite grande, pero que incluso un CubeSat de 1U puede abordar, 
+ofreciendo datos útiles para que los usuarios se familiaricen con el análisis y la distribución de información a nivel nacional.<br>
 
+Una vez definida la misión, los estudiantes desarrollan un escenario de misión y analizan su viabilidad con un CubeSat de 1U. En esta etapa deben responder preguntas clave:<br>
+
+<ul>
+<li>¿Qué componentes se necesitan?</li>
+<li>¿Se deben adquirir o desarrollar internamente?</li>
+<li>¿Todos los componentes caben dentro del volumen de 1U?</li>
+</ul>  
 
 Después de esto, se elaboran diagramas de bloques del sistema y modelos 3D preliminares.
 A continuación, se entra en la fase de desarrollo del satélite. El primer paso es obtener pruebas de concepto que confirmen que la misión es factible con hardware real. Luego, se procede con un diseño detallado, seguido por la construcción de prototipos o modelos de ingeniería.
@@ -124,7 +140,7 @@ Un CubeSat es una herramienta ideal para iniciarse en el desarrollo espacial. Lo
 El primer satélite no debe ser el último.
 Mantén siempre en mente la sostenibilidad a largo plazo.
 Si este es tu primer intento, construir este prototipo debe ser tu objetivo principal. Si ya tienes experiencia, aprovecha esta guía para reforzar tus conocimientos teóricos sobre subsistemas y mejorar la eficiencia de tus futuros proyectos.
-
-  
+<br><br><br>
+<center> <a href="teoria_primero.html"><u> <- Modulo Anterior </u></a> | <a href="teoria_tercero.html"><u>Siguiente Modulo > </u></a></center>
 </body>
 </html>
