--- a/teoria_segundo.html
+++ b/teoria_segundo.html
@@ -77,69 +77,92 @@ Una vez definida la misión, los estudiantes desarrollan un escenario de misión
 <li>¿Todos los componentes caben dentro del volumen de 1U?</li>
 </ul>  
 
-Después de esto, se elaboran diagramas de bloques del sistema y modelos 3D preliminares.
-A continuación, se entra en la fase de desarrollo del satélite. El primer paso es obtener pruebas de concepto que confirmen que la misión es factible con hardware real. Luego, se procede con un diseño detallado, seguido por la construcción de prototipos o modelos de ingeniería.
-Una vez validada la factibilidad, se construye un modelo de ingeniería, el cual se somete a pruebas exhaustivas. Este modelo permite verificar la funcionalidad del software, evaluar la resistencia ambiental y detectar posibles problemas de compatibilidad entre componentes. En paralelo, es fundamental desarrollar el software de misión y establecer las estaciones terrestres necesarias.
+Después de esto, se elaboran diagramas de bloques del sistema y modelos 3D preliminares.<br>
+A continuación, se entra en la fase de desarrollo del satélite. El primer paso es obtener pruebas de concepto que confirmen que la misión es factible con hardware real. 
+Luego, se procede con un diseño detallado, seguido por la construcción de prototipos o modelos de ingeniería.<br>
+Una vez validada la factibilidad, se construye un modelo de ingeniería, el cual se somete a pruebas exhaustivas. Este modelo permite verificar la funcionalidad del software, 
+evaluar la resistencia ambiental y detectar posibles problemas de compatibilidad entre componentes. En paralelo, es fundamental desarrollar el software de misión y establecer 
+las estaciones terrestres necesarias.<br><br>
 
-Durante esta etapa, el proyecto atraviesa varias revisiones de seguridad: cero, uno y dos, antes de ser aprobado para el vuelo. 
+Durante esta etapa, el proyecto atraviesa varias revisiones de seguridad: cero, uno y dos, antes de ser aprobado para el vuelo. <br>
 
-Esta fase suele tomar aproximadamente un mes.
-Completadas las revisiones, se construyen los modelos de vuelo, asegurando que el satélite esté ensamblado correctamente y libre de fallas de fabricación o materiales. También se realizan pruebas de software lo más exhaustivas posible.
+Esta fase suele tomar aproximadamente un mes.<br>
+Completadas las revisiones, se construyen los modelos de vuelo, asegurando que el satélite esté ensamblado correctamente y libre de fallas de fabricación o materiales. <br>
+También se realizan pruebas de software lo más exhaustivas posible.<br>
 
-Una vez entregado el satélite, pasan varios meses antes de su despliegue desde la Estación Espacial Internacional (ISS). Durante este periodo, los estudiantes se enfocan en preparar las operaciones de misión, incluyendo la planificación, simulaciones con la estación terrestre y revisión de lecciones aprendidas.
+Una vez entregado el satélite, pasan varios meses antes de su despliegue desde la Estación Espacial Internacional (ISS). Durante este periodo, los estudiantes se enfocan en preparar 
+las operaciones de misión, incluyendo la planificación, simulaciones con la estación terrestre y revisión de lecciones aprendidas.<br>
 
-Con el despliegue del satélite, comienza la fase operativa. El primer desafío es establecer el enlace de comunicación. Es recomendable ejecutar la misión principal tan pronto como sea posible, ya que el satélite puede fallar en cualquier momento. Además, es importante mantener una comunicación constante del estado del satélite con los usuarios y partes interesadas.
-
-
-Sostenibilidad
-
-Lograr construir y operar un CubeSat con éxito es un gran avance, pero no debe considerarse el final del camino. Es crucial no perder el impulso generado por ese primer logro. La sostenibilidad a largo plazo depende, ante todo, de retener a las personas con experiencia. Además, es necesario establecer una estrategia clara para sostener el programa espacial en el tiempo.
-
-Como se mencionó anteriormente, el objetivo es que los países en desarrollo inicien programas funcionales y sostenibles de desarrollo de CubeSats. 
-
-Un CubeSat puede representar el primer satélite de tu país, pero no debe ser el último.
-Tras el éxito inicial, el mayor desafío será mantener el equipo humano capacitado. 
+Con el despliegue del satélite, comienza la fase operativa. El primer desafío es establecer el enlace de comunicación. Es recomendable ejecutar la misión principal tan pronto 
+como sea posible, ya que el satélite puede fallar en cualquier momento. Además, es importante mantener una comunicación constante del estado del satélite con los usuarios y 
+partes interesadas.<br>
 
 
+<h3>Sostenibilidad</h3><br>
 
+Lograr construir y operar un CubeSat con éxito es un gran avance, pero no debe considerarse el final del camino. Es crucial no perder el impulso generado por ese primer logro. <br>
+La sostenibilidad a largo plazo depende, ante todo, de retener a las personas con experiencia. Además, es necesario establecer una estrategia clara para sostener el programa espacial 
+en el tiempo.<br>
 
-Estos recursos humanos son el pilar del desarrollo continuo de satélites pequeños. También es importante anticipar los obstáculos que enfrentará el segundo satélite, especialmente en términos de financiamiento y gestión institucional. 
-Por eso, debes ser capaz de demostrar el valor y la viabilidad de las soluciones espaciales frente a las necesidades reales del país.
-Para lograrlo, se debe establecer una visión a largo plazo sobre cómo el programa espacial beneficiará a la población. La misión del primer satélite es clave para sentar estas bases. 
+Como se mencionó anteriormente, el objetivo es que los países en desarrollo inicien programas funcionales y sostenibles de desarrollo de CubeSats. <br>
+<br><hr>
+Un CubeSat puede representar el primer satélite de tu país, pero no debe ser el último.<br>
+Tras el éxito inicial, el mayor desafío será mantener el equipo humano capacitado. <br>
+<hr><br>
 
-También es necesario alinear las expectativas de los distintos actores involucrados, establecer mecanismos de diálogo para identificar y priorizar necesidades, y tomar decisiones fundamentadas en términos técnicos y financieros. 
+Estos recursos humanos son el pilar del desarrollo continuo de satélites pequeños. También es importante anticipar los obstáculos que enfrentará el segundo satélite, 
+especialmente en términos de financiamiento y gestión institucional. <br>
+Por eso, debes ser capaz de demostrar el valor y la viabilidad de las soluciones espaciales frente a las necesidades reales del país.<br>
+Para lograrlo, se debe establecer una visión a largo plazo sobre cómo el programa espacial beneficiará a la población. La misión del primer satélite es clave para sentar estas bases. <br>
 
-La capacidad de tomar estas decisiones dependerá directamente de la experiencia del equipo humano.
-Después de terminar el prototipo de CubeSat detallado en este proyecto, el siguiente paso no debe ser un salto directo a un satélite de gran escala, ya que existe una brecha significativa en complejidad. En lugar de eso, se recomienda seguir una progresión gradual, construyendo sobre cada éxito previo. La clave está en mantener la continuidad.
+También es necesario alinear las expectativas de los distintos actores involucrados, establecer mecanismos de diálogo para identificar y priorizar necesidades, y tomar decisiones 
+fundamentadas en términos técnicos y financieros. <br>
 
-Este enfoque permite aplicar las lecciones aprendidas, mejorar la fiabilidad de las futuras misiones y fortalecer el conocimiento acumulado. Aunque la documentación técnica es valiosa, la experiencia práctica del equipo siempre será insustituible.
-Además, es fundamental construir y fortalecer redes de colaboración, tanto a nivel nacional como internacional. Estas redes pueden ser un factor clave para que los programas espaciales emergentes se desarrollen de manera sólida y cooperativa.
-Preguntas Frecuentes
+La capacidad de tomar estas decisiones dependerá directamente de la experiencia del equipo humano.<br>
+Después de terminar el prototipo de CubeSat detallado en este proyecto, el siguiente paso no debe ser un salto directo a un satélite de gran escala, ya que existe una brecha 
+significativa en complejidad. En lugar de eso, se recomienda seguir una progresión gradual, construyendo sobre cada éxito previo. La clave está en mantener la continuidad.<br>
 
-¿Cómo obtenemos financiamiento?
+Este enfoque permite aplicar las lecciones aprendidas, mejorar la fiabilidad de las futuras misiones y fortalecer el conocimiento acumulado. Aunque la documentación técnica es valiosa, 
+la experiencia práctica del equipo siempre será insustituible.<br>
+Además, es fundamental construir y fortalecer redes de colaboración, tanto a nivel nacional como internacional. Estas redes pueden ser un factor clave para que los programas 
+espaciales emergentes se desarrollen de manera sólida y cooperativa.<br>
 
- Piensa de forma creativa e innovadora. Para el primer satélite de un país, es posible contar con diversos apoyos: gobiernos, universidades, exalumnos, patrocinadores privados, campañas de crowdfunding y donaciones. Sin embargo, es fundamental tener una misión sólida y bien justificada; simplemente decir “es nuestro primer satélite” no es suficiente para atraer apoyo.
+<br><br><hr><br>
+<h3>Preguntas Frecuentes</h3><br>
 
-Este prototipo ha sido diseñado específicamente para que su desarrollo sea accesible económicamente para cualquier equipo con recursos moderados y organización estable.
+<b>¿Cómo obtenemos financiamiento?</b><br>
 
-¿Dónde podemos hacer pruebas si no contamos con instalaciones especializadas?
+Piensa de forma creativa e innovadora. Para el primer satélite de un país, es posible contar con diversos apoyos: gobiernos, universidades, exalumnos, patrocinadores privados, 
+campañas de crowdfunding y donaciones. Sin embargo, es fundamental tener una misión sólida y bien justificada; simplemente decir “es nuestro primer satélite” no es suficiente 
+para atraer apoyo.<br>
 
-Enfóquense en las pruebas realmente esenciales. Más adelante se presentarán las siete pruebas críticas que deben realizarse. Puedes buscar cámaras de vacío en facultades de física u otros laboratorios universitarios. Además, realizar inspecciones físicas simples, como revisar conexiones manualmente o agitar los módulos, puede ayudar a identificar fallas ocultas.
+<u>Este prototipo ha sido diseñado específicamente para que su desarrollo sea accesible económicamente para cualquier equipo con recursos moderados y organización estable.</u><br>
 
-¿Debemos comprar componentes comerciales o fabricarlos nosotros mismos? 
+<b>¿Dónde podemos hacer pruebas si no contamos con instalaciones especializadas?</b><br>
 
-Se recomienda comprar los componentes básicos (como la computadora de a bordo, el sistema de radio y el sistema de potencia) y enfocar el desarrollo en la carga útil personalizada.
+Enfóquense en las pruebas realmente esenciales. Más adelante se presentarán las siete pruebas críticas que deben realizarse.<br>
+Puedes buscar cámaras de vacío en facultades de física u otros laboratorios universitarios. Además, realizar inspecciones físicas simples, como revisar conexiones 
+manualmente o agitar los módulos, puede ayudar a identificar fallas ocultas.<br>
 
-Al adquirir componentes, es aconsejable optar por un solo proveedor para minimizar problemas de compatibilidad, especialmente en software. Siempre que sea posible, selecciona componentes con historial de vuelo comprobado y adquiere dos unidades: una para integrar en el satélite de vuelo y otra para pruebas y validación.
+<b>¿Debemos comprar componentes comerciales o fabricarlos nosotros mismos? </b><br>
 
+Se recomienda comprar los componentes básicos (como la computadora de a bordo, el sistema de radio y el sistema de potencia) y enfocar el desarrollo en la carga útil personalizada.<br>
 
-Recuerda
+Al adquirir componentes, es aconsejable optar por un solo proveedor para minimizar problemas de compatibilidad, especialmente en software. Siempre que sea posible, selecciona 
+componentes con historial de vuelo comprobado y adquiere dos unidades: una para integrar en el satélite de vuelo y otra para pruebas y validación.<br>
 
-Un CubeSat es una herramienta ideal para iniciarse en el desarrollo espacial. Lo más importante es completar todo el ciclo de vida del sistema, desde la definición de la misión hasta las operaciones en órbita.
+<br><hr><br>
+<h3>Recuerda</h3><BR>
 
-El primer satélite no debe ser el último.
-Mantén siempre en mente la sostenibilidad a largo plazo.
-Si este es tu primer intento, construir este prototipo debe ser tu objetivo principal. Si ya tienes experiencia, aprovecha esta guía para reforzar tus conocimientos teóricos sobre subsistemas y mejorar la eficiencia de tus futuros proyectos.
+Un CubeSat es una herramienta ideal para iniciarse en el desarrollo espacial. Lo más importante es completar todo el ciclo de vida del sistema, desde la definición de la misión hasta 
+las operaciones en órbita.<br>
+
+<i>El primer satélite no debe ser el último.</i><br>
+Mantén siempre en mente la sostenibilidad a largo plazo.<br>
+Si este es tu primer intento, construir este prototipo debe ser tu objetivo principal. Si ya tienes experiencia, aprovecha esta guía para reforzar tus conocimientos teóricos sobre 
+subsistemas y mejorar la eficiencia de tus futuros proyectos.<br>
+<br>
+<center>Gracias por leer.</center>
 <br><br><br>
 <center> <a href="teoria_primero.html"><u> <- Modulo Anterior </u></a> | <a href="teoria_tercero.html"><u>Siguiente Modulo > </u></a></center>
 </body>
