--- a/teoria_segundo.html
+++ b/teoria_segundo.html
@@ -136,13 +136,13 @@ Piensa de forma creativa e innovadora. Para el primer satélite de un país, es 
 campañas de crowdfunding y donaciones. Sin embargo, es fundamental tener una misión sólida y bien justificada; simplemente decir “es nuestro primer satélite” no es suficiente 
 para atraer apoyo.<br>
 
-<u>Este prototipo ha sido diseñado específicamente para que su desarrollo sea accesible económicamente para cualquier equipo con recursos moderados y organización estable.</u><br>
+<u>Este prototipo ha sido diseñado específicamente para que su desarrollo sea accesible económicamente para cualquier equipo con recursos moderados y organización estable.</u><br><br>
 
 <b>¿Dónde podemos hacer pruebas si no contamos con instalaciones especializadas?</b><br>
 
 Enfóquense en las pruebas realmente esenciales. Más adelante se presentarán las siete pruebas críticas que deben realizarse.<br>
 Puedes buscar cámaras de vacío en facultades de física u otros laboratorios universitarios. Además, realizar inspecciones físicas simples, como revisar conexiones 
-manualmente o agitar los módulos, puede ayudar a identificar fallas ocultas.<br>
+manualmente o agitar los módulos, puede ayudar a identificar fallas ocultas.<br><br>
 
 <b>¿Debemos comprar componentes comerciales o fabricarlos nosotros mismos? </b><br>
 
