--- a/teoria.html
+++ b/teoria.html
@@ -13,6 +13,7 @@ comprensión de los temas abordados.<br>
 <br>
   <h3>TEMAS</h3><br>
 <a href="teoria_primero.html">Entendiendo los satélites pequeños.</a><br>
+<a href="teoria_segundo.html">Líneas de tiempo y Sostenibilidad </a><br>
 
 </center>
   
